force-app/main/default/objects/B2B_Customer_Delivery_Date__c/B2B_Customer_Delivery_Date__c.object-meta.xml
<CustomObject>
    <description>This object will have the upcoming delivery dates for a B2B Customer. Data in this object will be inserted by a batch process.</description>
    <label>Preferred Delivery Day</label>
    <nameField>
        <displayFormat>CDD-{0000}</displayFormat>
        <label>Delivery Day Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Preferred Delivery Days</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>