force-app/main/default/objects/B2B_Customer_Delivery_Date__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Preferred Delivery Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_Dates</valueSetName>
    </valueSet>
</CustomField>