force-app/main/default/objects/B2B_Customer_Delivery_Date__c/fields/Time_from__c.field-meta.xml
<CustomField>
    <fullName>Time_from__c</fullName>
    <label>Time from</label>
    <type>Time</type>
</CustomField>