force-app/main/default/objects/B2B_Customer_Delivery_Date__c/fields/Time_To__c.field-meta.xml
<CustomField>
    <fullName>Time_To__c</fullName>
    <label>Time To</label>
    <type>Time</type>
</CustomField>