force-app/main/default/objects/B2B_Customer_Delivery_Date__c/fields/Today_Day_Name__c.field-meta.xml
<CustomField>
    <fullName>Today_Day_Name__c</fullName>
    <formula>CASE( MOD( TODAY() - DATE( 1900, 1, 7 ), 7 ), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, &quot;Saturday&quot; )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Today Day Name</label>
    <type>Text</type>
</CustomField>