force-app/main/default/objects/B2B_Customer_Delivery_Date__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Day__c</columns>
    <columns>Time_from__c</columns>
    <columns>Time_To__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>